# ETLValidationProject

./: README.md  behave.ini  package-lock.json  package.json  pyproject.toml  requirements.txt
dbt_project/: .user.yml  dbt_project.yml  profiles.yml
dbt_project/models/: schmea.yml
dbt_project/models/marts/: sales_mart.sql
dbt_project/models/staging/: stg_orders.sql  stg_products.sql
dbt_project/seeds/: orders.csv  products.csv
features/: ELT_Transformation.feature  environment.py
features/steps/: ELT_Transformation_steps.py
great_expectations/: great_expectations.yml
great_expectations/expectations/: .ge_store_backend_id  sales_mart.json  stg_orders.json  stg_products.json
src/core/: config.py  db_utilities.py  dbt_runner.py  ge_helper.py  ge_runner.py  soft_assertion.py
